tests/neg/saferExceptions.check
-- Error: tests/neg/saferExceptions.scala:12:16 ------------------------------------------------------------------------
12 |      case 4 => throw Exception()             // error
   |                ^^^^^^^^^^^^^^^^^
   |                The capability to throw exception Exception is missing.
   |                The capability can be provided by one of the following:
   |                 - Adding a using clause `(using CanThrow[Exception])` to the definition of the enclosing method
   |                 - Adding `throws Exception` clause after the result type of the enclosing method
   |                 - Wrapping this piece of code with a `try` block that catches Exception
   |
   |                The following import might fix the problem:
   |
   |                  import unsafeExceptions.canThrowAny
   |
-- Error: tests/neg/saferExceptions.scala:17:46 ------------------------------------------------------------------------
17 |  def baz(x: Int): Int throws Failure = bar(x)  // error
   |                                              ^
   |      The capability to throw exception java.io.IOException is missing.
   |      The capability can be provided by one of the following:
   |       - Adding a using clause `(using CanThrow[java.io.IOException])` to the definition of the enclosing method
   |       - Adding `throws java.io.IOException` clause after the result type of the enclosing method
   |       - Wrapping this piece of code with a `try` block that catches java.io.IOException
   |
   |      The following import might fix the problem:
   |
   |        import unsafeExceptions.canThrowAny
   |
